--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0"
   },
   "devDependencies": {
